# mokoto

./: Cargo.toml  grammar.mly
crates/mokoto/: Cargo.toml
crates/mokoto/src/: lexer.rs  parser.rs  syntax.rs
crates/mokoto/src/parser/: declaration.rs  expression.rs  literals.rs  pattern.rs  patterns.rs  token_set.rs  types.rs
crates/mokoto/src/syntax/: ast.rs  grammar.ungram  nodes.rs
crates/mokoto/tests/: parser.rs  types.rs
crates/mokoto/tests/snapshots/: parser__parse_patterns@Unary.mo-10.snap  parser__parse_patterns@Unary.mo-11.snap  parser__parse_patterns@Unary.mo-12.snap  parser__parse_patterns@Unary.mo-13.snap  parser__parse_patterns@Unary.mo-14.snap  parser__parse_patterns@Unary.mo-2.snap  parser__parse_patterns@Unary.mo-3.snap  parser__parse_patterns@Unary.mo-4.snap  parser__parse_patterns@Unary.mo-5.snap  parser__parse_patterns@Unary.mo-6.snap  parser__parse_patterns@Unary.mo-7.snap  parser__parse_patterns@Unary.mo-8.snap  parser__parse_patterns@Unary.mo-9.snap  parser__parse_patterns@Unary.mo.snap  parser__parse_types@Complex.mo.snap  parser__parse_types@Func.mo-10.snap  parser__parse_types@Func.mo-2.snap  parser__parse_types@Func.mo-3.snap  parser__parse_types@Func.mo-4.snap  parser__parse_types@Func.mo-5.snap  parser__parse_types@Func.mo-6.snap  parser__parse_types@Func.mo-7.snap  parser__parse_types@Func.mo-8.snap  parser__parse_types@Func.mo-9.snap  parser__parse_types@Func.mo.snap  parser__parse_types@Path.mo-2.snap  parser__parse_types@Path.mo.snap  parser__parse_types@Pre.mo-2.snap  parser__parse_types@Pre.mo-3.snap  (+27 more)
xtask/src/: codegen.rs  (+2 more)
(+9 files in other folders)
